--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: FLTK
-version: 0.530
+version: 0.530_001
 author:
   - 'Sanko Robinson <sanko@cpan.org>'
 abstract: Perl interface to the (experimental) 2.0.x branch of the FLTK GUI toolkit
@@ -8,11 +8,11 @@ license: artistic_2
 resources:
   ChangeLog: http://github.com/sanko/fltk-perl/commits/master
   bugtracker: http://github.com/sanko/fltk-perl/issues
-  homepage: http://sanko.github.com.com/fltk-perl/
+  homepage: http://sanko.github.com/fltk-perl/
   license: http://www.perlfoundation.org/artistic_license_2_0
   repository: http://github.com/sanko/fltk-perl
 build_requires:
-  Alien::FLTK: 0.06879
+  Alien::FLTK: 0.06916
   Config: 0
   Cwd: 0
   Devel::PPPort: 0
@@ -45,7 +45,7 @@ configure_requires:
 provides:
   FLTK:
     file: lib/FLTK.pm
-    version: 0.530
+    version: 0.531
   FLTK::Adjuster:
     file: xs/Adjuster.xsi
     version: 0.530
@@ -232,18 +232,72 @@ provides:
   FLTK::Output:
     file: xs/Output.xsi
     version: 0.530
+  FLTK::PackedGroup:
+    file: xs/PackedGroup.xsi
+    version: 0.530
+  FLTK::PixelType:
+    file: xs/PixelType.xsi
+    version: 0.530
   FLTK::Plugin:
     file: xs/Plugin.xsi
     version: 0.530
+  FLTK::PopupMenu:
+    file: xs/PopupMenu.xsi
+    version: 0.530
+  FLTK::Preferences:
+    file: xs/Preferences.xsi
+    version: 0.530
+  FLTK::ProgressBar:
+    file: xs/ProgressBar.xsi
+    version: 0.530
+  FLTK::RadioButton:
+    file: xs/RadioButton.xsi
+    version: 0.530
+  FLTK::RadioItem:
+    file: xs/RadioItem.xsi
+    version: 0.530
+  FLTK::RadioLightButton:
+    file: xs/RadioLightButton.xsi
+    version: 0.530
+  FLTK::Rectangle:
+    file: xs/Rectangle.xsi
+    version: 0.531
+  FLTK::RepeatButton:
+    file: xs/RepeatButton.xsi
+    version: 0.531
+  FLTK::ReturnButton:
+    file: xs/ReturnButton.xsi
+    version: 0.531
+  FLTK::ScrollGroup:
+    file: xs/ScrollGroup.xsi
+    version: 0.0531
+  FLTK::Scrollbar:
+    file: xs/Scrollbar.xsi
+    version: 0.0531
+  FLTK::SecretInput:
+    file: xs/SecretInput.xsi
+    version: 0.0531
+  FLTK::ShapedWindow:
+    file: xs/ShapedWindow.xsi
+    version: 0.0531
+  FLTK::Slider:
+    file: xs/Slider.xsi
+    version: 0.0531
   FLTK::Style:
     file: xs/Style.xsi
     version: 0.530
+  FLTK::Symbol:
+    file: xs/Symbol.xsi
+    version: 0.0531
+  FLTK::Valuator:
+    file: xs/Valuator.xsi
+    version: 0.0531
   FLTK::Version:
     file: xs/Version.xsi
     version: 0.530
   FLTK::Widget:
     file: xs/Cursor.xsi
-    version: 0.530
+    version: 0.531
   FLTK::Window:
     file: xs/Window.xsi
     version: 0.530
@@ -268,13 +322,24 @@ provides:
   FLTK::events:
     file: xs/events.xsi
     version: 0.530
+  FLTK::file_chooser:
+    file: xs/file_chooser.xsi
+    version: 0.531
+  FLTK::pnmImage:
+    file: xs/pnmImage.xsi
+    version: 0.530
   FLTK::run:
     file: xs/run.xsi
     version: 0.530
+  FLTK::xpmImage:
+    file: xs/xpmImage.xsi
+    version: 0.531
 no_index:
   directory:
     - examples
     - inc
+  files:
+    - xs/ppport.pl
 generated_by: 'Conversion, software version 7.0'
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
