--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: FLTK
-version: 0.530_003
+version: 0.530_004
 author:
   - 'Sanko Robinson <sanko@cpan.org>'
 abstract: Perl interface to the (experimental) 2.0.x branch of the FLTK GUI toolkit
@@ -12,11 +12,11 @@ resources:
   license: http://www.perlfoundation.org/artistic_license_2_0
   repository: http://github.com/sanko/fltk-perl
 build_requires:
-  Alien::FLTK: 0.06921
+  Alien::FLTK: 0.06921_001
   Config: 0
   Cwd: 0
   Devel::PPPort: 0
-  ExtUtils::CBuilder: 0.24
+  ExtUtils::CBuilder: 0.2605
   ExtUtils::ParseXS: 0
   File::Find: 0
   File::Path: 2.04
@@ -24,12 +24,12 @@ build_requires:
   Module::Build: 0
   Pod::Parser: 0
   Test::More: 0.88
-  perl: v5.8.0
+  perl: 5.008
 requires:
   Config: 0
   Cwd: 0
   Devel::PPPort: 0
-  ExtUtils::CBuilder: 0.24
+  ExtUtils::CBuilder: 0.2605
   ExtUtils::ParseXS: 0
   File::Find: 0
   File::Path: 2.04
@@ -37,7 +37,7 @@ requires:
   Module::Build: 0
   Test::More: 0.88
   base: 0
-  perl: v5.8.0
+  perl: 5.008
 recommends:
   OpenGL: 0.58
 configure_requires:
@@ -338,30 +338,9 @@ no_index:
   directory:
     - examples
     - inc
+    - t
   files:
     - xs/include/ppport.h
-    - t/10000_basic/10001_use_ok.t
-    - t/20000_functions/20010_ask.t
-    - t/20000_functions/20014_draw.t
-    - t/20000_functions/20018_Flags.t
-    - t/20000_functions/20030_run.t
-    - t/20000_functions/21000_Version.t
-    - t/40000_widgets/40010_clock.t
-    - t/40000_widgets/40013_dial.t
-    - t/40000_widgets/40016_filldial.t
-    - t/40000_widgets/40018_floatinput.t
-    - t/40000_widgets/40020_input.t
-    - t/40000_widgets/40022_intinput.t
-    - t/40000_widgets/40024_item.t
-    - t/40000_widgets/47010_subclass.t
-    - t/50000_objects/50001_Preferences.t
-    - t/50000_objects/50005_Rectangle.t
-    - t/60000_types/60001_Color.t
-    - t/60000_types/60002_events.t
-    - t/60000_types/60003_damage.t
-    - t/60000_types/60004_Font.t
-    - t/60000_types/60006_Image.t
-    - t/60000_types/60030_Style.t
 generated_by: 'Conversion, software version 7.0'
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
