--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,9 @@
 ---
 name: FLTK
-version: 0.530_010
+version: 0.531
 author:
   - 'Sanko Robinson <sanko@cpan.org>'
-abstract: Perl bindings to the (experimental) 2.0.x branch of the FLTK GUI toolkit
+abstract: Perl bindings to the Fast Light Toolkit
 license: artistic_2
 resources:
   ChangeLog: http://github.com/sanko/fltk-perl/commits/master
@@ -24,8 +24,10 @@ build_requires:
   Module::Build: 0.35_05
   Pod::Parser: 0
   Test::More: 0.88
+  base: 0
   perl: 5.008
 requires:
+  Alien::FLTK: 0.06921_004
   Config: 0
   Cwd: 0
   Devel::PPPort: 0
@@ -35,6 +37,7 @@ requires:
   File::Path: 2.07
   File::Spec: 0
   Module::Build: 0.35_05
+  Pod::Parser: 0
   Test::More: 0.88
   base: 0
   perl: 5.008
@@ -44,7 +47,7 @@ configure_requires:
   Module::Build: 0.35
 provides:
   FLTK:
-    file: lib/FLTK.pm
+    file: xs/FLTK.xs
     version: 0.531
   FLTK::Adjuster:
     file: xs/Adjuster.xsi
@@ -302,7 +305,7 @@ provides:
     file: xs/Version.xsi
     version: 0.531
   FLTK::Widget:
-    file: xs/Cursor.xsi
+    file: xs/Widget.xsi
     version: 0.531
   FLTK::Window:
     file: xs/Window.xsi
