--- a/META.yml
+++ b/META.yml
@@ -47,7 +47,7 @@ no_index:
 provides:
   FLTK:
     file: lib/FLTK.pm
-    version: 0.531_003
+    version: 0.531_004
   FLTK::Adjuster:
     file: xs/Adjuster.xsi
     version: 0.530
@@ -152,7 +152,7 @@ provides:
     version: 0.530
   FLTK::Group:
     file: xs/Group.xsi
-    version: 0.530
+    version: 0.532
   FLTK::HelpDialog:
     file: xs/HelpDialog.xsi
     version: 0.530
@@ -170,7 +170,7 @@ provides:
     version: 0.530
   FLTK::Input:
     file: xs/Input.xsi
-    version: 0.530
+    version: 0.532
   FLTK::InputBrowser:
     file: xs/InputBrowser.xsi
     version: 0.530
@@ -297,6 +297,12 @@ provides:
   FLTK::TextBuffer:
     file: xs/TextBuffer.xsi
     version: 0.532
+  FLTK::TextDisplay:
+    file: xs/TextDisplay.xsi
+    version: 0.532
+  FLTK::TextDisplay::StyleTableEntry:
+    file: xs/TextDisplay/StyleTableEntry.xsi
+    version: 0.532
   FLTK::TextSelection:
     file: xs/TextSelection.xsi
     version: 0.532
@@ -348,13 +354,16 @@ provides:
   FLTK::run:
     file: xs/run.xsi
     version: 0.531
+  FLTK::theme:
+    file: xs/Theme.xsi
+    version: 0.532
   FLTK::xpmImage:
     file: xs/xpmImage.xsi
     version: 0.531
 recommends:
   OpenGL: 0.58
 requires:
-  Alien::FLTK2: 0.06970017
+  Alien::FLTK2: 0.06970019
   Config: 0
   Cwd: 0
   Devel::PPPort: 0
@@ -374,4 +383,4 @@ resources:
   homepage: http://sanko.github.com/perl-fltk2/
   license: http://www.perlfoundation.org/artistic_license_2_0
   repository: http://github.com/sanko/perl-fltk2
-version: 0.531_003
+version: 0.531_004
